--- a/kitty/kitty-themes/kitty.conf
+++ b/kitty/kitty-themes/kitty.conf
@@ -1,4 +1,9 @@
+# /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  #
 
+# you can choose themes from $HOME/.config/kitty/kitty-themes/
+include ./kitty-themes/Dracula.conf
+
+# font_family FantasqueSansM Nerd Font Mono Bold
 font_size 16.0
 bold_font auto
 italic_font auto
